test_suite/alan-2022-examples/failing/005060_mutation.alan
source K03o begin leave N7s1a array Vr end
